# ECSE458_Minimalist_Blockchain

./: .clang-format  .gitignore  CMakeLists.txt  README.md  default.profraw  generate_coverage_report.sh
src/: cli.c  cli.h  commandList.txt  interpreter.c  main.c  shell.c
src/cli/: block_input.json  command_list.txt  interpreter.c  interpreter.h  shell.c  shell.h  user.json
src/model/block/: block.c  block.h  block_persistence.c  block_persistence.h
src/model/transaction/: transaction.c  transaction.h  transaction_persistence.c  transaction_persistence.h
src/socket/: client.c  server.c  transaction_test_client.txt  transaction_test_server.txt
src/test/: cryptography_test.c  glib_hashtable_test.c  transaction_foo.json
src/utils/: constants.h  cryptography.c  cryptography.h  log_utils.c  log_utils.h  mjson.c  mjson.h  mysql_instructions  mysql_util.c  mysql_util.h  socket_util.c  socket_util.h  sys_utils.c  sys_utils.h
test/model/: block_test.c  transaction_test.c
